<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AztecFAQ</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_text_username">Username</string>
    <string name="edit_text_password">Password</string>
    <string name="login_button_text">Log In</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account_button_text">Create Account</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="edit_text_profile_name">Profile Name</string>
    <string name="edit_text_confirm_password">Confirm Password</string>
    <string name="have_account_button_text">Have Account?</string>
    <string name="title_activity_user_demographic">UserDemographicActivity</string>
    <string name="facebook_app_id">1415149058803482</string>
    <string name="demographic_question_1">What is your age?</string>
    <string name="demographic_question_2">What university do you attend?</string>
    <string name="demographic_question_3">What is your major?</string>

    <string-array name="age_array">
        <item>16-20</item>
        <item>21-25</item>
        <item>26-30</item>
        <item>31-35</item>
        <item>36-40</item>
        <item>41-45</item>
        <item>46-50</item>
        <item>51-55</item>
        <item>56-60</item>
    </string-array>
    <string-array name="university_array">
        <item>San Diego State University</item>
        <item>University of California San Diego</item>
    </string-array>
    <string-array name="major_array">
        <item>Computer Science</item>
        <item>Marketing</item>
        <item>Business</item>
        <item>Music</item>
    </string-array>
    <string-array name="list_menu_items">
        <item>Discussion Board</item>
        <item>Account</item>
        <item>Contact Us</item>
        <item>Logout</item>
    </string-array>

    <string name="title_activity_home">Home</string>
    <string name="done_button_text">Done</string>
    <string name="news_feed_textView">NewsFeed</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="title_activity_main_host">MainHostActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_contact_us">ContactUs</string>
    <string name="title_activity_logout">LogoutActivity</string>
    <string name="contact_us_text">Contact information:</string>
    <string name="contact_us_info">veds1988@yahoo.com</string>
    <string name="send_feedback_button_text">Send Feedback</string>
    <string name="post_question_button_text">Post Question</string>
    <string name="question_edit_text_hint">What is your question?</string>
    <string name="discussion_item_question">What is the procedure of registering for classes?</string>
    <string name="answer_list_item">Starbucks is the favourite coffee place</string>
    <string name="answer_button_text">Write Answer</string>
    <string name="title_activity_category">Category</string>
    <string name="choose_category_text">Select a Category for discussion:</string>

    <string-array name="category_list_menu_items">
        <item>ACADEMIC</item>
        <item>JOBS</item>
        <item>ADMINISTRATION</item>
        <item>HOUSING</item>
        <item>FOOD</item>
        <item>TRAVEL</item>
        <item>OTHER</item>
    </string-array>

    <string name="title_activity_discussion_board">DiscussionBoard</string>
    <string name="title_activity_academic_category">Academic</string>
    <string name="recommend_answer_button_text">Like</string>
    <string name="answer">Answer</string>
    <string name="submit">Submit</string>
    <string name="account_information_text">Account Information:</string>
    <string name="account_username">Username: </string>
    <string name="account_profile_name">Profile Name: </string>
    <string name="edit_question_button_text">Edit</string>
    <string name="edit_answer_button_text">Edit</string>
    <string name="edit_dialog_title">Edit</string>
    <string name="default_like_count">0 Likes</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>

</resources>
