<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:background="@color/maroon"
              android:orientation="vertical"
              tools:context="com.example.vedikajadhav.tieinn.ContactUsActivity">

    <TextView
        android:text="@string/contact_us_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:text="@string/contact_us_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/send_feedback_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_feedback_button_text"
        android:layout_marginTop="30dp"/>

</LinearLayout>
