<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@color/maroon"
                android:orientation="vertical"
                tools:context="com.example.vedikajadhav.tieinn.CreateAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="0.4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/logo">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.6">

            <EditText
                android:id="@+id/edit_text_profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="textPersonName"
                android:hint="@string/edit_text_profile_name"
                android:layout_marginBottom="1dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/edit_text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="textEmailAddress"
                android:hint="@string/edit_text_username"
                android:layout_marginBottom="1dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="textPassword"
                android:hint="@string/edit_text_password"
                android:layout_marginBottom="1dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:imeOptions="actionNext"/>

        <EditText
            android:id="@+id/edit_text_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:inputType="textPassword"
            android:hint="@string/edit_text_confirm_password"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:imeOptions="actionDone"/>
        
        <Button
            android:id="@+id/create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/create_account_button_text"
            android:onClick="createAccount"/>

        </LinearLayout>
    <TextView
        android:id="@+id/have_account_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:clickable="true"
        android:text="@string/have_account_button_text"/>

</LinearLayout>
